Updated image src.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="images/chris_picture.jpg" alt="Christopher profile picture"></td>
+      <td><img src="chris_picture.jpg" alt="Christopher profile picture"></td>
       <td>
         <h1>Christopher Adelmann</h1>
         <p>
